--- a/JAVA/EE/SpringBoot/spring-annotations/pom.xml
+++ b/JAVA/EE/SpringBoot/spring-annotations/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring.framework}</version>
+			<version>4.3.17.RELEASE</version>
 		</dependency>
 
 	</dependencies>
